Fixed the same issues with BrowserHistoryManager.